--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,37 +31,42 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
     # State Management
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
 
-
-
     # Network
   dio: ^5.4.0
+  dio_smart_retry: ^6.0.0
   pretty_dio_logger: ^1.3.1
 
   # Environment Variables
   flutter_dotenv: ^5.1.0
 
-
+#Utils
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
-
-    # Utils
-  intl: ^0.18.1
+  flutter_secure_storage: ^9.2.2
+  hive_ce_flutter: ^2.0.0
+  internet_connection_checker_plus: ^2.5.1
+  intl: ^0.19.0
+  path_provider: ^2.1.4
+  talker_dio_logger: ^4.4.1
+  talker_flutter: ^4.4.0
+  talker_riverpod_logger: ^4.4.1
   logger: ^2.0.2+1
   animate_do: ^3.3.4
   flutter_screenutil: ^5.9.3
   pin_code_fields: ^8.0.1
   google_fonts: ^6.2.1
+  simple_shadow: ^0.3.1
+
 
 dev_dependencies:
   flutter_test:
@@ -89,11 +94,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
+    - assets/fonts/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
